# DataPsychProject

./: .gitignore  README.md  Untitled-1.ipynb  pyproject.toml
jupyter/: report.ipynb
src/project/: task.py
